data/derived/fa15/progs/unify/prog2744.ml.out
Characters 41-56:
  let rec clone x n = fun n -> List.append (clone x (n-1)) [x];;
                                           ^^^^^^^^^^^^^^^
Error: This expression has type int -> 'a
       but an expression was expected of type 'b list
